2025-10-08_ataccama_kubernetes/workspace/yaml/fe_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend-go
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
