2025-10-08_ataccama_kubernetes/workspace/yaml/be_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: be
spec:
  selector:
    app: be
  ports:
    - port: 80
      targetPort: 8000
