2025-10-08_ataccama_kubernetes/workspace/yaml/fe_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe
spec:
  selector:
    app: fe
  ports:
    - port: 80
      targetPort: 3000
